(Bug Fix): Added Overflow X Scroll

--- a/src/app/module/ng-swipe-to-delete/ng-swipe-to-delete.component.scss
+++ b/src/app/module/ng-swipe-to-delete/ng-swipe-to-delete.component.scss
@@ -1,5 +1,4 @@
 .ngstd-main-canvas{
-  overflow-x: hidden;
   /deep/
   mat-list-item .mat-list-item-content {
     padding: 0 !important;
